--- a/styles/slider.css
+++ b/styles/slider.css
@@ -34,10 +34,16 @@
   top: 50%;
   transform: translateY(-50%);
   -webkit-transform: translateY(-50%);
-  fill: #fff;
+  /* fill: #fff; */
+  fill: #514e4e;
   cursor: pointer;
 
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7));
+  /* background-image: linear-gradient(rgba(26, 26, 26, 0.7), rgba(26, 26, 26, 0.7)); */
+
+  background-image: linear-gradient(rgb(250, 250, 250), rgb(255, 255, 255));
+
+  box-shadow: 0 8px 12px 0 rgba(36, 39, 44, 0.15);
+
   padding: 10px;
   border-radius: 50%;
   box-sizing: border-box;
@@ -48,14 +54,16 @@
 }
 
 .arrow--left {
-  left: 5px;
+  left: -20px;
 }
 
 .arrow--right {
   left: auto;
-  right: 5px;
+  right: -20px;
 }
 
 .arrow--disabled {
-  fill: rgba(255, 255, 255, 0.5);
+  visibility: hidden;
+
+  /* fill: rgba(255, 255, 255, 0.5); */
 }
