--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  --primary-color-500: #1e8667;
+  --light: #fff;
+}
+.highlight-text {
+  background-color: var(--primary-color-500);
+  color: var(--light);
+}
