--- a/styles/tiptap-editor.css
+++ b/styles/tiptap-editor.css
@@ -1,7 +1,10 @@
+.light .tiptap {
+  background-color: #fff;
+}
+
 .tiptap {
   --max-height: 100px;
 
-  background-color: #fff;
   padding: 10px;
   min-height: 100px;
   border: 1px solid #ccc;
