--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,3 +10,9 @@
   background-color: var(--primary-color-500);
   color: var(--light);
 }
+
+@layer utilities {
+  .home-section-wrapper {
+    @apply mt-4 rounded-xl bg-background px-2 py-4 md:mt-16 lg:px-6 lg:py-8 md:shadow-md
+  }
+}
